# stylesync-backend

./: README.md  TODO-BACKEND.md  TODO.md  alembic.ini  app.py  db.py  pyproject.toml  render.yaml  requirements.txt  requirements_backup.txt  scraper.py  stylesync.db
alembic/: env.py
alembic/versions/: 3ef507ed535b_initial_models.py
