[tool.poetry]
name = "stylesync"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.2"
uvicorn = "0.32.0"
pydantic = "2.9.1"
psycopg2-binary = "2.9.10"
playwright = "1.48.0"
pillow = "11.1.0"
colorthief = "0.2.1"
python-multipart = "0.0.12"
alembic = "1.16.2"
sqlalchemy = "2.0.36"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
